# total

./: README.md
dev_skm-feature-ai_score_ljb/: .gitignore  ANTIGRAVITY_UI_API_REQUIREMENTS_v1.md  API_RESPONSE_CONTRACT_v1.md  COMPANY_CONTEXT_MODIFIER_PLAN_v1.md  DB_SCHEMA_GAP_CHECK_v1.md  DMA 점수 로직 v1 Freeze 완료 보고서.md  DMA_v1_code_review_detailed.md  NEXT_PHASE_HANDOFF_ESG_DMA_MVP.md  NEXT_PHASE_HANDOFF_ESG_DMA_MVP_v2.md  SKM_ESG_v5_2_dummy_Data.sql  SKM_MVP_UI_API_기능정의서_v2.xlsx  implementatio12n_plan.md
dev_skm-feature-onborading_renewal/: 123implementation_plan.md  API_RESPONSE_CONTRACT_v1.1.md  COMPANY_CONTEXT_MODIFIER_PLAN_v1.md  DMA_G0_FINANCIAL_SCORING_REDESIGN_NOTES.md  README.md  (+6 more)
dev_skm-skm_test/backend/: main.py  perf_log.csv  pyproject.toml
dev_skm-skm_test/backend/src/apis/: auth.py  benchmk.py  user.py
dev_skm-skm_test/backend/src/models/: auth.py  benchmk.py  materialitycontext.py  model.py  user.py
dev_skm-skm_test/backend/src/services/benchmarks/: service.py
dev_skm-skm_test/backend/src/services/company_profiles/: service.py
dev_skm-skm_test/backend/src/services/materialities/: context.py  contextgraph.py  financialexposure.py  service.py
dev_skm-skm_test/backend/src/services/medias/: adapter.py  pipeline.py  service.py
dev_skm-skm_test/backend/src/services/reports/: service.py
dev_skm-skm_test/backend/src/utils/: auth.py  companycontextrepository.py  db.py  dmaaggregator.py  dmafinancialrepository.py  dmarepository.py  dmascoring.py  fastset.py  htmltem.py  ocrai.py  ocraiv8.py  rediscl.py  settings.py  tokenset.py  validatetok.py
(+217 files in other folders)
